@@ -20,9 +20,14 @@ rm -rf ${LOG}
 >>${LOG}
 
 date >> ${LOG} 2>&1
+PYTHONPATH="${PYTHONLIB}:${MGI_PYTHONLIB}:${ANACONDAPYTHONLIB}"
+export PYTHONPATH
 ${PYTHON} secondary.py >> ${LOG} 2>&1
 date >> ${LOG} 2>&1
 
 date >> ${LOG} 2>&1
 ./secondaryReports.csh >> ${LOG} 2>&1
 date >> ${LOG} 2>&1
+
+# copy logs/gxd to /data/reports/qcreports_db/archive/gxd
+cp -r ${LOGDIR}/gxd ${QCREPORTDIR}/archive/gxd/littriage.`date '+%Y%m%d.%H%M'`
